Added command for saving deps into a file